--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "loop-track",
+  "homepage": "https://nagarajalva5790.github.io/loop-track",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -49,6 +52,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^6.3.0",
     "typescript": "^4.9.5"
   }
 }
